syntax = "proto3";

package io.wks.snowflake.api;

option java_multiple_files = true;

service SnowflakeService {
  rpc newId (SnowflakeRequest) returns (SnowflakeResponse) {}
}

// Empty message for the sake or forward-compatibility; https://stackoverflow.com/a/31772973/821110
message SnowflakeRequest {
  
}

message SnowflakeResponse {
  uint64 id = 1;
}